<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="gradus" translatable="false">°</string>

    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <!--Common resources-->
    <string name="app_name">YamblzWeatherApp</string>
    <string name="ok">OK</string>

    <!--NavigationView screen-->
    <string name="edit">Edit</string>

    <!--Weather screen-->
    <string name="weather">Weather</string>
    <string name="text_weather_error">Failed to get weather</string>
    <string name="mm">mm</string>
    <string name="ms">m/s</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="percent" translatable="false">%</string>

    <!--Settings screen-->
    <string name="settings_title_temperature">Temperature</string>
    <string name="settings">Settings</string>
    <string name="update_interval">Update interval</string>

    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">1 hour</string>
    <string name="min_180">3 hours</string>

    <!--About screen-->
    <string name="about">About</string>
    <string name="version">Version %1$s</string>
    <string name="weather_images_license_text">Weather images are designed by Linector from Flaticon</string>

    <!--About screen-->
    <string name="search_title">Search</string>
    <string name="city_search">City search</string>
    <string name="city_name">City name</string>
    <string name="get_city_list_error">Can\'t get city weather list</string>

    <!--Test strings-->
    <string name="version_test">Version</string>

</resources>
