<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorAccent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/header_icon_size"
        android:layout_height="@dimen/header_icon_size"
        android:background="@drawable/ic_umbrella"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorNavHeaderText"
        android:textSize="@dimen/app_name_in_header_text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSearchOnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_search"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
